--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,8 +1,7 @@
-<!-- Login Screen -->
-    <div class="card w-100 p-3" >
+<div class="card w-100 p-3" >
         
         <div class="card-body border border-dark ">
-          <h5 class="card-title d-flex justify-content-between text-dark" style="background-color: aquamarine ;padding: 4px">Login</h5>
+          <h5 class="card-title d-flex justify-content-between text-dark" style="background-color: aquamarine ;padding: 4px">Sign Up</h5>
           <div class="form-outline">
             <input type="email" id="typeEmail" class="form-control" />
             <label class="form-label" for="typeEmail">Email input</label>
@@ -14,9 +13,9 @@
         </div>
         
         <div class="card-body d-flex justify-content-around">
-            <a href="#" class="btn btn-primary w-75">Login</a>
+            <a href="#" class="btn btn-primary w-75">Sign Up</a>
         </div>
         <div class="card-body">
-            <a href="/signup" class="card-link">Sign Up Instead</a>
+            <a href="/login" class="card-link">Login Instead</a>
         </div>
-    </div>
+</div>
