--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -7,15 +7,22 @@
             <label class="form-label" for="typeEmail">Email input</label>
           </div>
           <div class="form-outline">
+            <input type="text" id="typeText" class="form-control" />
+              <label class="form-label" for="form1">Username</label>
+            </div>
+          <div class="form-outline">
             <input type="password" id="typePassword" class="form-control" />
             <label class="form-label" for="typePassword">Password input</label>
           </div>
         </div>
         
-        <div class="card-body d-flex justify-content-around">
-            <a href="#" class="btn btn-primary w-75">Sign Up</a>
-        </div>
+        <form class="signup-form card-body d-flex justify-content-around">
+          <button  class="btn btn-primary w-75 "type="submit">Sign Up</button>
+        </form>
+
         <div class="card-body">
             <a href="/login" class="card-link">Login Instead</a>
         </div>
 </div>
+
+<script src="/javascript/signup.js"></script>
