--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -4,17 +4,19 @@
           <h5 class="card-title d-flex justify-content-between text-dark" style="background-color: aquamarine ;padding: 4px">Create Post</h5>
             <div class="form-outline " style="padding: 1em">
                 <label class="form-label text-dark w-100" for="typeText" style="padding: 4px">Title</label>
-                <input type="text" id="typeText" class="form-control" />
+                <input type="text" id="typeText" class="form-control" name="post-title" />
             </div>
         
             <div class="form-group " style="padding: 1em">
                 <label for="exampleFormControlTextarea2" class="text-dark w-100" style="padding: 4px">Content</label>
-                <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3"></textarea>
+                <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" name="post-content" ></textarea>
             </div>
 
-            <div class="card-body d-flex justify-content-around"style="padding-bottom: 1px;">
-                <a href="#" class="btn btn-primary w-75">Create</a>
-            </div>
+            
         </div>
-
+            <form class="new-post-form card-body d-flex justify-content-around">
+                <button class="btn btn-primary w-75" type="submit">Save post</button>
+            </form>
     </div>
+
+    <script src="/javascript/add-post.js"></script>
