--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -2,21 +2,28 @@
         
     <div class="card-body border border-dark ">
     <h5 class="card-title d-flex justify-content-between text-dark" style="background-color: aquamarine ;padding: 4px">Edit Post</h5>
+    {{!-- <form class="edit-post-form"> --}}
     <div class="form-outline " style="padding: 1em">
         <label class="form-label text-dark w-100" for="typeText" style="padding: 4px">Title</label>
-        <input type="text" id="typeText" class="form-control" value="{{post.title}}" />
+        <input type="text" id="typeText" class="form-control" value="{{post.title}}" name="post-title"/>
         
     </div>
 
     <div class="form-group " style="padding: 1em">
         <label for="exampleFormControlTextarea2" class="text-dark w-100" style="padding: 4px">Content</label>
-        <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3"  >{{post.post_content}}</textarea>
+        <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" name="post-content" >{{post.post_content}}</textarea>
     </div>
 
-    <div class="card-body d-flex justify-content-around"style="padding-bottom: 1px;">
-        <a href="#" class="btn btn-primary w-75">Update</a>
-    </div>
+    
     <div class="card-body d-flex justify-content-around" style="padding-top: 1px">
         <a href="#" class="btn btn-primary w-75">Delete</a>
     </div>
+{{!-- </form> --}}
+{{!-- </form> --}}
 </div>
+<form class="edit-post-form card-body d-flex justify-content-around">
+    <button class="btn btn-primary w-75" type="submit">Save post</button>
+</form>
+
+
+<script src="/javascript/edit-post.js"></script>
