--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,10 +13,17 @@
           </div>
         </div>
         
-        <div class="card-body d-flex justify-content-around">
-            <a href="#" class="btn btn-primary w-75">Login</a>
-        </div>
+   
+        <form class="login-form card-body d-flex justify-content-around">
+          <button  class="btn btn-primary w-75 "type="submit">Login</button>
+        </form>
         <div class="card-body">
             <a href="/signup" class="card-link">Sign Up Instead</a>
         </div>
+
+        
     </div>
+
+    
+
+    <script src="/javascript/login.js"></script>
