--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -10,14 +10,19 @@
 
 {{/if}}
 
+
+{{#if loggedIn}}
 <div class="form-group border border-dark" style="padding: 1em">
-    <label for="exampleFormControlTextarea2" class="text-dark w-100" style="background-color: aquamarine ;padding: 4px">Small textarea</label>
-    <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3"></textarea>
+    <label for="exampleFormControlTextarea2" class="text-dark w-100" style="background-color: aquamarine ;padding: 4px">Add a comment</label>
+    <textarea class="form-control rounded-0" id="typeComment" rows="3"></textarea>
 </div>
 
-<div class="card-body d-flex justify-content-around">
-    <a href="#" class="btn btn-primary w-75">Add Comment</a>
-</div>
+<form class="comment-form card-body d-flex justify-content-around">
+    <button  class="btn btn-primary w-75 "type="submit">Add Comment</button>
+</form>
+{{/if}}
+
 
 </div>
 
+<script src="/javascript/comment.js"></script>
