--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -2,7 +2,7 @@
         
     <div class="card-body border border-dark ">
     <h5 class="card-title d-flex justify-content-between text-dark" style="background-color: aquamarine ;padding: 4px">Edit Post</h5>
-    {{!-- <form class="edit-post-form"> --}}
+  
     <div class="form-outline " style="padding: 1em">
         <label class="form-label text-dark w-100" for="typeText" style="padding: 4px">Title</label>
         <input type="text" id="typeText" class="form-control" value="{{post.title}}" name="post-title"/>
@@ -15,15 +15,14 @@
     </div>
 
     
-    <div class="card-body d-flex justify-content-around" style="padding-top: 1px">
-        <a href="#" class="btn btn-primary w-75">Delete</a>
-    </div>
-{{!-- </form> --}}
-{{!-- </form> --}}
 </div>
 <form class="edit-post-form card-body d-flex justify-content-around">
-    <button class="btn btn-primary w-75" type="submit">Save post</button>
+    <button class="btn btn-primary w-75" type="submit">Save Post</button>
+</form>
+<form class="delete-post-btn card-body d-flex justify-content-around">
+    <button class="btn btn-primary w-75" type="click">Delete Post</button>
 </form>
 
 
 <script src="/javascript/edit-post.js"></script>
+<script src="/javascript/delete-post.js"
