--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,12 +13,12 @@
         
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item {{#if home}} active {{/if}}">
               <a class="nav-link" href="/">Home</a>
             </li>
-
+            
             {{#if loggedIn}}
-            <li class="nav-item">
+            <li class="nav-item {{#if dashboard}} active {{/if}} ">
               <a class="nav-link" href="/dashboard">Dashboard</a>
             </li>
             
