--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
             </li>
 
             {{else}}
-            <li class="nav-item">
+            <li class="nav-item {{#if login}} active {{/if}}">
               <a class="nav-link" href="/login">Login</a>
             </li>
             {{/if}}
